# capstone_2_ROS

./: .gitignore  README.md
TT_final/: Readme.md
TT_final/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
TT_final/devel/include/tt_core_msgs/: CameraCrop.h  CameraCropRequest.h  CameraCropResponse.h  CameraImg.h  CameraImgRequest.h  CameraImgResponse.h  CompressedImagePoint.h  ImagePoint.h  MapFlag.h  MapGenPoint.h  MapGenPointRequest.h  MapGenPointResponse.h  MobileNetCrop.h  MobileNetCropRequest.h  MobileNetCropResponse.h  ROIPointArray.h  Vector3DArray.h  XboxFlag.h
TT_final/devel/lib/motion_planner/: astar_planner  motion_planner_node  send_signal_node
TT_final/devel/lib/pkgconfig/: motion_planner.pc  rplidar.pc  tt3_common.pc  tt3_description.pc  tt_core_msgs.pc  tt_map_gen.pc  tt_rl_motion_planner.pc
TT_final/devel/lib/rplidar/: rplidar_client  tt_rplidar_node
TT_final/devel/share/motion_planner/cmake/: motion_plannerConfig.cmake
TT_final/devel/share/rplidar/cmake/: rplidarConfig.cmake
TT_final/devel/share/tt3_common/cmake/: tt3_commonConfig.cmake
TT_final/devel/share/tt3_description/cmake/: tt3_descriptionConfig.cmake
TT_final/src/: .gitignore  README.md
TT_final/src/module/: README.md
TT_final/src/module/rplidar/: CMakeLists.txt  gmapping.rviz  package.xml
TT_final/src/module/rplidar/laser_scan_matcher/: CMakeLists.txt  package.xml
TT_final/src/module/rplidar/laser_scan_matcher/include/laser_scan_matcher/: laser_scan_matcher.h
TT_final/src/module/rplidar/laser_scan_matcher/src/: laser_scan_matcher.cpp
TT_final/src/module/rplidar/launch/: rplidar.launch
TT_final/src/module/rplidar/src/: client.cpp  node.cpp
TT_final/src/module/xbox_ctrl/: CMakeLists.txt
TT_final/src/module/xbox_ctrl/src/: xbox_ctrl.cpp
TT_final/src/sys_config/: astra.gpfl  cam_setup.sh  genius.gpfl  genius2.gpfl  genius3.gpfl  genius4.gpfl  genius5.gpfl
TT_final/src/tt3_common/tt3_common/: CMakeLists.txt  package.xml
TT_final/src/tt3_common/tt3_description/: CMakeLists.txt  package.xml
TT_final/src/tt3_common/tt_core_msgs/: CMakeLists.txt
TT_final/src/tt3_common/tt_core_msgs/srv/: CameraCrop.srv  MapGenPoint.srv  MobileNetCrop.srv
TT_final/src/tt3_motion/: README.md
TT_final/src/tt3_motion/motion_planner/: CMakeLists.txt
TT_final/src/tt3_motion/motion_planner/config/: planner.yaml  planner_backup.yaml  planner_backup_final.yaml
TT_final/src/tt3_motion/motion_planner/src/: motion_planner_node.cpp  motion_planner_node_v1.cpp  path_finder.cpp  path_finder_main.cpp  send_signal.cpp  tt_astar_planner_node.cpp
TT_final/src/tt3_motion/tt_map_gen/: CMakeLists.txt  package.xml
TT_final/src/tt3_motion/tt_map_gen/config/: map_gen.yaml
TT_final/src/tt3_motion/tt_map_gen/include/: map_gen.h
TT_final/src/tt3_motion/tt_map_gen/src/: ball_detect_monitor.cpp  map_gen.cpp  map_monitor.cpp  rl_map.cpp  rl_map_backup.cpp
TT_final/src/tt3_motion/tt_rl_motion_planner/: CMakeLists.txt  package.xml
TT_final/src/tt3_motion/tt_rl_motion_planner/config/: map_gen.yaml
TT_final/src/tt3_motion/tt_rl_motion_planner/src/tt_a3c/: __init__.py  estimators.py  policy_monitor.py  simulator.py  test.py  train.py  worker.py
TT_final/src/tt3_motion/tt_rl_motion_planner/src/tt_dqn/: __init__.py  dqn.py  dqn_utils.py  run_a3c_tt.py  simulator.py  test_dqn_tt.py
capstone_design/ball_detection/: CMakeLists.txt
capstone_design/ball_detection/src/: ball_detect.cpp
capstone_design/comm_tcp/src/: server_node.cpp
capstone_design/data_integrate/: CMakeLists.txt
capstone_design/devel/: .catkin  .rosinstall  setup.sh
capstone_design/devel/include/core_msgs/: ball_position.h
capstone_design/devel/lib/ball_detection/: ball_detect_node
capstone_design/devel/lib/comm_tcp/: client_node  server_node
capstone_design/devel/lib/compute_position_in_other_frame/: compute_position_in_other_frame
capstone_design/devel/lib/data_integrate/: data_integation_node  data_show_node
capstone_design/devel/lib/dqn/: covert_to_simulator_image
capstone_design/devel/lib/dynamic_tf_example/: dynamic_tf_example
capstone_design/devel/lib/fake_ball_in_rviz/: fake_ball_in_rviz
capstone_design/devel/lib/image_transport_tutorial/: my_publisher  my_subscriber  my_subscriber_law_image
capstone_design/devel/lib/pkgconfig/: ball_detection.pc  comm_tcp.pc  compute_position_in_other_frame.pc  core_msgs.pc  data_integrate.pc  dqn.pc  dynamic_tf_example.pc  fake_ball_in_rviz.pc  image_transport_tutorial.pc  launch_rviz.pc  rplidar_ros.pc  static_tf_example.pc  webcam.pc  xbox_ctrl.pc
capstone_design/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
capstone_design/devel/lib/static_tf_example/: static_tf_example
capstone_design/devel/lib/webcam/: webcam_node
capstone_design/devel/lib/xbox_ctrl/: xbox_ctrl_Client  xbox_ctrl_node
capstone_design/gcc_makefile_cmake/0.gcc_example/: README.txt
capstone_design/gcc_makefile_cmake/1.makefile_example/: Makefile  main_pthread.cpp
capstone_design/gcc_makefile_cmake/2.cmake_example/build-cmake_example-Desktop-Default/: CMakeCache.txt  cmake_example.cbp
capstone_design/rplidar_ros/: README.md
capstone_design/src/ball_detection/src/: ball_detect.cpp
capstone_design/src/cnn_for_jetson/: CMakeLists.txt  Readme.md  package.xml
capstone_design/src/cnn_for_jetson/src/: catdog_cnn_network.py  testimage_publisher.cpp
capstone_design/src/core_msgs/: CMakeLists.txt
capstone_design/src/data_integrate/src/: data_integration.cpp
capstone_design/src/dqn/: CMakeLists.txt
capstone_design/src/dqn/src/: convert_sensor_to_image.cpp  covert_to_simulator_image.cpp  import_test.py  rl_dqn_network.py  simulator.py
capstone_design/src/readmarker/src/: onboard_camera_publisher_cvbridge.py
capstone_design/tf_example/: README.md
capstone_design/webcam/src/: webcam_node.cpp
session_notes/gcc_makefile_cmake/1.makefile_example/: README.txt  main.cpp
session_notes/gcc_makefile_cmake/2.cmake_example/build-cmake_example-Desktop-Default/: Makefile  cmake_install.cmake
session_notes/gcc_makefile_cmake/2.cmake_example/cmake_example/: CMakeLists.txt
(+109 files in other folders)
