<?xml version="1.0"?>
<package>
  <name>tt_rl_motion_planner</name>
  <version>0.0.0</version>
  <description>The tt_rl_motion_planner package</description>

  <maintainer email="brightgh@naver.com">ghryou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tt_core_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tt_core_msgs</run_depend>

</package>
